# Connected_display

./: .gitignore  .project  CERTIFICATE_PROVISIONING.md  CMakeLists.txt  ETCHSKETCH_SHARED_VIEW.md  Event_System_README.md  IMPLEMENTATION_NOTES.md  MQTT_MESSAGES.json  NVS_USAGE_GUIDE.md  PROVISIONING_TEST.md  README.md  deploy_firmware.ps1  open_weather_api.txt  partitions.csv  provision_certificates.ps1  provision_certificates.py  provision_certificates.sh  sdkconfig  sdkconfig.old
docs/: CHANGES_TO_EXISTING_FILES.md  ETCHSKETCH_SHARED_VIEW.md  MQTT_PROTOCOL.md  PROVISIONING_IMPLEMENTATION.md  PROVISIONING_QUICKSTART.md  SERVER_INTEGRATION_GUIDE.md
lookup_table/: lookup_finer.csv  lookup_temp.csv
main/: CMakeLists.txt  animation.c  animation.h  device_config.c  event_system.c  http_rest.c  led_driver.c  led_driver.h  local_time.c  local_time.h  main.c  main.h  mqtt.c  mqtt.h  mqtt_protocol.c  ota.c  provisioning.c  spi.c  spi.h  sprite.c  sprite.h  text_renderer.c  ui.c  ui.h  view.c  view.h  wifi.c  wifi.h
main/Include/: animation.h  device_config.h  event_system.h  http_rest.h  led_driver.h  local_time.h  main.h  mqtt.h  mqtt_protocol.h  ota.h  provisioning.h  sprite.h  text_renderer.h  ui.h  wifi.h
main/Views/: ble_sensor_view.c  bootup_view.c  conway.c  conway.h  etchsketch.c  etchsketch.h  menu.c  music.c  provisioning_view.c  view.c  view.h  weather.c  weather.h
main/Views/Include/: ble_sensor_view.h  bootup_view.h  conway.h  etchsketch.h  menu.h  music.h  provisioning_view.h  view.h  weather.h
main_archive/10-8-23/: main.c  main.h  wifi.c
tools/: README.md  pixel_editor.py  sample_output.c  visualize_display.py
(+41 files in other folders)
