idf_component_register(
	SRCS 
	"led_driver.c"
	"animation.c"
	"event_system.c"
	"http_rest.c"
	"local_time.c"
	"main.c"
	"mqtt.c"
	"mqtt_protocol.c"
	"device_config.c"
	"provisioning.c"
	"spi.c"
	"sprite.c"
	"tasks.c"
	"ui.c"
	"wifi.c"
	"ota.c"
	"Views/view.c"
	"Views/menu.c"
	"Views/conway.c"
	"Views/weather.c"
	"Views/etchsketch.c"
	"Views/provisioning_view.c"
	"Views/bootup_view.c"
                    
	INCLUDE_DIRS
	"Include"
	"Views/Include"
	)
target_compile_options(${COMPONENT_LIB} PRIVATE "-Wno-format")
